--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -62,30 +62,34 @@
             <p>ITBMS (7%): <span id="itbms">$0.00</span></p>
             <h3>Total: <span id="total">$0.00</span></h3>
         </div>
-
-        <hr>
-
-        <h3 style="margin-top: 30px;">Historial de Cotizaciones</h3>
         
-        <table class="tabla-servicios" id="tablaHistorial">
-            <thead>
-                <tr>
-                    <th>Fecha</th>
-                    <th>No. Cotización</th>
-                    <th>Cliente</th>
-                    <th>Subtotal</th>
-                    <th>Impuesto</th>
-                    <th>Total</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-            </div>
+<section class="historial-container">
+    <h2>Historial de Cotizaciones</h2>
 
+    <table class="tabla-servicios" id="tablaHistorial">
+        <thead>
+            <tr>
+                <th>Fecha</th>
+                <th>No. Cotización</th>
+                <th>Cliente</th>
+                <th>Subtotal</th>
+                <th>Impuesto</th>
+                <th>Total</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <button id="btnGuardarHistorial" class="btn-add" style="margin-top: 15px;">
+        Guardar Registro
+    </button>
 </section>
+</div>
+
 
 </body>
 </html>
+
 
 
 
