--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -62,7 +62,8 @@
             <p>ITBMS (7%): <span id="itbms">$0.00</span></p>
             <h3>Total: <span id="total">$0.00</span></h3>
         </div>
-        
+</section>
+        <div class="center">
 <section class="historial-container">
     <h2>Historial de Cotizaciones</h2>
 
@@ -85,10 +86,9 @@
     </button>
 </section>
 </div>
-
-
 </body>
 </html>
+
 
 
 
