--- a/cotizar-user.html
+++ b/cotizar-user.html
@@ -29,6 +29,8 @@
 
         <label>Seleccionar servicio</label>
         <select id="selectServicio"></select>
+        <button id="btnGuardar" class="btn-save">Guardar Cotización</button>
+        <hr>
 
         <button id="btnAgregar" class="btn-add">Agregar Servicio</button>
 
