--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -17,13 +17,14 @@
         <a href="servicios-admin.html">Servicios</a>
         <a href="clientes-admin.html">Registrar Cliente</a>
         <a href="cotizar-admin.html">Cotizar</a>
+        <a href="historial-admin.html">Cotizar</a>
     </nav>
 </header>
 
 <section class="cotizador-container">
 
     <div class="left-panel">
-        <h2>Crear Cotización</h2>
+        <h2>Crear Cotización para el cliente</h2>
 
         <label>Cliente</label>
         <input type="text" id="nombreCliente" placeholder="Nombre del cliente">
@@ -65,6 +66,7 @@
 </section>
 </body>
 </html>
+
 
 
 
