--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -31,8 +31,8 @@
 
         <label>Seleccionar servicio</label>
         <select id="selectServicio"></select>
-
         <button id="btnAgregar" class="btn-add">Agregar Servicio</button>
+        <button id="btnGuardar" class="btn-save">Guardar Cotización</button>
 
         <hr>
 
@@ -66,6 +66,7 @@
 </section>
 </body>
 </html>
+
 
 
 
