--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -17,7 +17,7 @@
         <a href="servicios-admin.html">Servicios</a>
         <a href="clientes-admin.html">Registrar Cliente</a>
         <a href="cotizar-admin.html">Cotizar</a>
-        <a href="historial-admin.html">Cotizar</a>
+        <a href="historial-admin.html">Historial</a>
     </nav>
 </header>
 
@@ -66,6 +66,7 @@
 </section>
 </body>
 </html>
+
 
 
 
