--- a/historial-admin.html
+++ b/historial-admin.html
@@ -16,8 +16,7 @@
         <a href="index-admin.html">Inicio</a>
         <a href="servicios-admin.html">Servicios</a>
         <a href="clientes-admin.html">Registrar Cliente</a>
-        <a href="cotizar-admin.html">Cotizar</a>
-        <a href="historial-admin.html" class="active">Historial</a>
+        <a href="cotizar-admin.html"> Volver a cotizar</a>
     </nav>
 </header>
 
