--- a/historial-admin.html
+++ b/historial-admin.html
@@ -16,7 +16,7 @@
         <a href="index-admin.html">Inicio</a>
         <a href="servicios-admin.html">Servicios</a>
         <a href="clientes-admin.html">Registrar Cliente</a>
-        <a href="cotizar-admin.html"> Volver a cotizar</a>
+        <a href="cotizar-admin.html"> Volver </a>
     </nav>
 </header>
 
