--- a/historial-admin.html
+++ b/historial-admin.html
@@ -17,6 +17,33 @@
     </nav>
 </header>
 
+    <section class="historial-container">
+    <h2>Filtros</h2>
+
+    <!-- Filtros arriba de la tabla -->
+    <div class="filtros-container">
+        <input type="text" id="buscarCliente" placeholder="Buscar por cliente">
+        <input type="date" id="fechaDesde" title="Desde">
+        <input type="date" id="fechaHasta" title="Hasta">
+        <button id="btnFiltrar">Filtrar</button>
+        <button id="btnLimpiar">Limpiar</button>
+    </div>
+
+    <table class="tabla-historial">
+        <thead>
+            <tr>
+                <th>Fecha</th>
+                <th>N° Cotización</th>
+                <th>Cliente</th>
+                <th>Subtotal</th>
+                <th>ITBMS</th>
+                <th>Total</th>
+            </tr>
+        </thead>
+        <tbody id="listaHistorial"></tbody>
+    </table>
+</section>
+
 <section class="historial-container">
     <h2>Historial de Cotizaciones</h2>
 
@@ -33,69 +60,6 @@
         </thead>
         <tbody id="listaHistorial"></tbody>
     </table>
-
-    <section class="historial-container">
-    <h2>Filtros </h2>
-        
-   <!-- Filtros -->
-<div class="filtros">
-    <input type="text" id="buscarCliente" placeholder="Buscar por cliente">
-    <input type="date" id="fechaDesde">
-    <input type="date" id="fechaHasta">
-    <button id="btnFiltrar">Filtrar</button>
-    <button id="btnLimpiar">Limpiar</button>
-</div>
-
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-    const listaHistorial = document.getElementById('listaHistorial');
-
-    const buscarCliente = document.getElementById('buscarCliente');
-    const fechaDesde = document.getElementById('fechaDesde');
-    const fechaHasta = document.getElementById('fechaHasta');
-    const btnFiltrar = document.getElementById('btnFiltrar');
-    const btnLimpiar = document.getElementById('btnLimpiar');
-
-    // Guardamos todas las filas originales
-    const filasOriginales = Array.from(listaHistorial.querySelectorAll('tr'));
-
-    function filtrarTabla() {
-        const clienteFiltro = buscarCliente.value.toLowerCase();
-        const desde = fechaDesde.value;
-        const hasta = fechaHasta.value;
-
-        filasOriginales.forEach(fila => {
-            const celdas = fila.querySelectorAll('td');
-            const fecha = celdas[0].textContent.trim();
-            const cliente = celdas[2].textContent.trim().toLowerCase();
-
-            let mostrar = true;
-
-            if (clienteFiltro && !cliente.includes(clienteFiltro)) {
-                mostrar = false;
-            }
-
-            if (desde && fecha < desde) {
-                mostrar = false;
-            }
-
-            if (hasta && fecha > hasta) {
-                mostrar = false;
-            }
-
-            fila.style.display = mostrar ? '' : 'none';
-        });
-    }
-
-    btnFiltrar.addEventListener('click', filtrarTabla);
-
-    btnLimpiar.addEventListener('click', () => {
-        buscarCliente.value = '';
-        fechaDesde.value = '';
-        fechaHasta.value = '';
-        filasOriginales.forEach(fila => fila.style.display = '');
-    });
-});
-    </script>
+</section>
 </body>
 </html>
