--- a/historial-admin.html
+++ b/historial-admin.html
@@ -17,7 +17,7 @@
     </nav>
 </header>
 
-    <section class="historial-container">
+<section class="historial-container">
     <h2>Historial de Cotizaciones</h2>
 
     <!-- Filtros arriba de la tabla -->
@@ -40,25 +40,9 @@
                 <th>Total</th>
             </tr>
         </thead>
-        <tbody id="listaHistorial"></tbody>
-    </table>
-</section>
-
-<section class="historial-container">
-    <h2>Filtros</h2>
-
-    <table class="tabla-historial">
-        <thead>
-            <tr>
-                <th>Fecha</th>
-                <th>N° Cotización</th>
-                <th>Cliente</th>
-                <th>Subtotal</th>
-                <th>ITBMS</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody id="listaHistorial"></tbody>
+        <tbody id="listaHistorial">
+            <!-- Aquí se deben cargar las cotizaciones -->
+        </tbody>
     </table>
 </section>
 </body>
